Signals chart overlap issue fixed and minor changes

--- a/static/react/src/assets/css/style.css
+++ b/static/react/src/assets/css/style.css
@@ -22128,6 +22128,9 @@ body .p-inputtext:enabled:focus:not(.p-error) {
   line-height: 0.6em;
   padding: 10px;
 }
+.sigtooltip {
+  right:-25px !important
+}
 .btn-graph-info {
   position: absolute;
   right: 20px;
